--- a/src/General/assets/scss/index.scss
+++ b/src/General/assets/scss/index.scss
@@ -10,3 +10,26 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+// .react-select-container {
+//   background-color: red;
+// }
+
+.react-select__control {
+  background-color: #3f3f46 !important;
+  border-color: #71717a !important;
+  color: red !important;
+  @apply py-1.5;
+}
+
+.react-select__single-value {
+  color: white !important;
+}
+
+.react-select__menu, .react-select__option {
+  background-color: #3f3f46 !important;
+}
+
+.react-select__option:hover {
+  background-color: #52525b !important;
+}
