--- a/src/General/assets/scss/index.scss
+++ b/src/General/assets/scss/index.scss
@@ -66,3 +66,12 @@ body {
 .react-select-wrap__indicator-separator {
   display: none;
 }
+
+
+.react-select__indicator-separator {
+  display: none;
+}
+
+.react-select__value-container img {
+  display: none;
+}
