--- a/src/General/assets/scss/index.scss
+++ b/src/General/assets/scss/index.scss
@@ -5,6 +5,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 // General
 body {
   -webkit-font-smoothing: antialiased;
