added darkmode implementation

--- a/src/shared/assets/scss/index.scss
+++ b/src/shared/assets/scss/index.scss
@@ -121,7 +121,7 @@ body {
 
 .isInactiveNavLink {
   svg {
-    @apply fill-neutral-400;
+    @apply dark:fill-neutral-400 fill-neutral-600;
   }
   &:hover svg {
     @apply fill-white;
