--- a/src/shared/assets/scss/index.scss
+++ b/src/shared/assets/scss/index.scss
@@ -7,8 +7,14 @@
 
 html,
 body {
-  height: 100%;
-  margin: 0;
+  @apply h-full m-0;
+}
+
+body:not(.dark) {
+  @apply bg-slate-100;
+}
+body.dark {
+  @apply bg-neutral-900;
 }
 
 ::selection {
