added staking ui

--- a/src/shared/assets/scss/index.scss
+++ b/src/shared/assets/scss/index.scss
@@ -165,3 +165,12 @@ body {
     @apply fill-black dark:fill-white;
   }
 }
+
+.remove-arrows::-webkit-inner-spin-button,
+.remove-arrows::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.remove-arrows {
+  -moz-appearance: textfield;
+}
